[package]
name = "leptos-surreal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
surrealdb = "1.0.0"
